Finalizacion HU001 Y HU02